Z-index bug

--- a/src/frontend/src/app/components/calendar/calendar.component.css
+++ b/src/frontend/src/app/components/calendar/calendar.component.css
@@ -10,7 +10,10 @@
   padding: 20px;
   margin-top: 5vh;
   min-height: 40vh;
+  position: relative;
 }
+
+
 
 .header {
   display: flex;
@@ -101,7 +104,7 @@
   border: 1px solid #444;
   border-radius: 5px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-  z-index: 100;
+  z-index: 10;
   width: 150px;
   margin-top: 10px;
   max-height: 300px;
@@ -272,6 +275,6 @@
     border-radius: 4px;
     font-size: 12px;
     white-space: nowrap;
-    z-index: 10;
+    z-index: 2;
   }
 }
