--- a/src/frontend/src/app/components/inscription-modal/inscription-modal.component.css
+++ b/src/frontend/src/app/components/inscription-modal/inscription-modal.component.css
@@ -9,6 +9,7 @@
   justify-content: center;
   align-items: center;
   z-index: 1000;
+  backdrop-filter: blur(3px);
 }
 
 .modal-content {
@@ -18,6 +19,7 @@
   max-width: 400px;
   position: relative;
   padding: 2rem;
+  z-index: 100001;
 }
 
 .close-button {
